kubernetes-manifests/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hfgql
  namespace: test-network
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: example.hfgql.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hfgql
              servicePort: 8080
  tls:
    - hosts:
        - example.hfgql.com
status:
  loadBalancer:
    ingress:
      - {}
